<resources>
    <string name="app_name">CoinPedia</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    //CALCULATOR
    <string name="result_default">0</string>
    <string name="buttonClear">C</string>
    <string name="buttonPoint">.</string>
    <string name="buttonZero">0</string>
    <string name="buttonOne">1</string>
    <string name="buttonTwo">2</string>
    <string name="buttonThree">3</string>
    <string name="buttonFour">4</string>
    <string name="buttonFive">5</string>
    <string name="buttonSix">6</string>
    <string name="buttonSeven">7</string>
    <string name="buttonEight">8</string>
    <string name="buttonNine">9</string>

    <string name="text_ham_button_text_normal">Ham Button Text(Normal)</string>
    <string name="text_ham_button_sub_text_normal">Ham Button Sub Text(Normal)</string>

    <string name="text_search">&#xf002; Search</string>

    //MENU
    <string name="str_home">HOME</string>
    <string name="str_news">NEWS</string>
    <string name="str_calculaor">CALCULATOR</string>
    <string name="str_notification">NOTIFICATIONS</string>
    <string name="str_home_desc"></string>
    <string name="str_news_desc"></string>
    <string name="str_calculaor_desc"></string>
    <string name="str_notification_desc"></string>


    <array name="bitcoin">
        <item>NO DATA</item>
    </array>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="button_product_tour">product tour</string>

    <string name="welcom_head_01">CoinPedia on the go</string>
    <string name="welcom_content_01">Get stuff done with or without an internet connection.</string>
    <string name="welcom_head_02">Graph &amp; Description</string>
    <string name="welcom_content_02">Each coin have Graph and Specific Coin Description</string>
    <string name="welcom_head_03">Automatically save from the web</string>
    <string name="welcom_content_03">Never lose your progress, so you can keep in touch with most popular coin</string>
    <string name="welcom_head_04">Lot more</string>
    <string name="welcom_content_04">List, Search, Graph, News, Notification and save coin range - all within CoinPedia.</string>

    //CALC
    <string name="btn_cancel">&#xf057;</string>
    <string name="down_arrow">&#xf0d7;</string>
    <string name="up_arrow">&#xf0d8;</string>

    // JELLY TOOLBAR
    <string name="str_news_feed">News feed</string>

    <string-array name="defaultVal">
        <item>No Data</item>
    </string-array>

    <string name="text_forurm">Chat</string>
    <string name="type_your_message">Say Something...</string>
    <string name="appwidget_text">Example</string>
    <string name="add_widget">Add widget</string>

</resources>
